--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2000,11 +2000,11 @@
 
 /*Fuzzy*/
 "ETK_KVKK_Izin_Politikasi" = "Politica de Permisiuni";
-"kvkk_firms_link" = "";
-"kvkk_commercial_info_link" = "";
-"syncing" = "";
-"downloading" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"kvkk_firms_link" = "Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş şi Companiile Grupului";
+"kvkk_commercial_info_link" = "Politica de Permisiuni";
+"syncing" = "Sincronizare";
+"downloading" = "Descărcarea";
+"ETK_KVKK_Izin_Politikası" = "Politica de Permisiuni";
 
 /*Free for {3 months}
 then {11,99 TRY/Month}*/
@@ -2043,13 +2043,13 @@ then {11,99 TRY/Month}*/
 /*Facelift*/
 "tabbar_foryou" = "Pentru Voi";
 "tabbar_discover" = "Descoperi";
-"change_pass_mail_or_phone" = "";
-"mystorage_become_premium" = "";
+"change_pass_mail_or_phone" = "E-mail sau Număr de Telefon";
+"mystorage_become_premium" = "Pentru mai multe funcții, deveniți membru Premium";
 "we_are_creating_your_story_title" = "Vă pregătim povestea.";
 "we_are_creating_your_story_desc" = "Îl poți găsi în albumul Videoclipuri atunci când este gata.";
 "trash_bin" = "Coș de Gunoi";
 "empty_gallery_no_photo" = "Nu aveți încă nicio fotografie";
-"empty_gallery_no_video" = "";
-"empty_gallery_no_sync" = "";
-"empty_gallery_no_unsync" = "";
-"subscription_offer_cancel_button" = "";
+"empty_gallery_no_video" = "Încă nu ai niciun videoclip în lifebox";
+"empty_gallery_no_sync" = "Încă nu aveți fotografii în lifebox";
+"empty_gallery_no_unsync" = "Toate fișierele tale sunt actualizate în lifebox";
+"subscription_offer_cancel_button" = "Anulare";
