--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -265,7 +265,7 @@
 "info" = "ინფო";
 "Enable photo permissions in settings" = "ჩართეთ ფოტოზე ნებართვები, პარამეტრებში";
 "Start adding your photos" = "დაიწყე ფოტოების დამატება";
-"You don’t have anything on your photo roll." = "შენ ჯერ არ გაქვს არანაირი ფოტო ან ვიდეო შენს ლაიფბოქსში.";
+"You don’t have anything on your photo roll." = "ჯერ არ გაქვს ფოტო,ან ვიდეო lifebox-ში.";
 "View All Pictures" = "ყველა ფოტოს ნახვა";
 "View All My Stream" = "ყველა ჩემი სტრიმის ნახვა";
 "%d Photos" = "%d ფოტო";
@@ -2026,28 +2026,28 @@ then {11,99 TRY/Month}*/
 "title_paycell_friends" = "მომხმარებლები, რომლებმაც შეიძინეს პაკეტი (%d)";
 "paycell_share_message" = "შევუერთდი Lifebox Brand Ambassador პროგრამას. შეგიძლია მიიღო პროგრამის სპეციფიკური lifebox 6 თვიანი 250 GB Premium პაკეტი სპეციალურ ფასად ქვემოთ მოცემულ ბმულზე დაწკაპუნებით. არ გამოტოვო 😊";
 "beeline_cancel_TC" = "შეგიძლიათ მართოთ ან გააუქმოთ თქვენი Lifebox გამოწერა ბილაინის არხებიდან.";
-"foryou_throwback" = "Throwback";
-"foryou_myalbums" = "My Albums";
-"foryou_myanimations" = "My Animations";
-"foryou_collages" = "Collages";
-"foryou_my_collages" = "My Collages";
-"foryou_animations" = "Animations";
-"foryou_no_album_warn" = "You haven't created an album yet.";
-"foryou_no_photopick_warn" = "You haven't used PhotoPick yet.";
-"foryou_no_story_warn" = "No active stories currently.";
-"foryou_try_photopick" = "Try PhotoPick";
-"foryou_see_all" = "See All";
+"foryou_throwback" = "დაბრუნება";
+"foryou_myalbums" = "ჩემი ალბომები";
+"foryou_myanimations" = "ჩემი ანიმაციები";
+"foryou_collages" = "კოლაჟები";
+"foryou_my_collages" = "ჩემი კოლაჟები";
+"foryou_animations" = "ანიმაციები";
+"foryou_no_album_warn" = "ჯერ არ გაქვს შექმნილი ალბომი";
+"foryou_no_photopick_warn" = "ჯერ არ გაქვს გამოყენებული PhotoPick-ი";
+"foryou_no_story_warn" = "აქტიური stories-ები ამჟამად არ არის.";
+"foryou_try_photopick" = "სცადე PhotoPick-ი";
+"foryou_see_all" = "ნახე ყველა";
 
 /*Facelift*/
-"tabbar_foryou" = "For You";
-"tabbar_discover" = "Discover";
-"change_pass_mail_or_phone" = "E-mail or Phone number";
-"mystorage_become_premium" = "mystorage_become_premium";
-"we_are_creating_your_story_title" = "We are preparing your story.";
-"we_are_creating_your_story_desc" = "Once it is done, you can access it from Videos Album.";
-"trash_bin" = "Trash Bin";
-"empty_gallery_no_photo" = "You don’t have any photos or videos in your lifebox yet.";
-"empty_gallery_no_video" = "You don’t have any videos in your lifebox yet.";
-"empty_gallery_no_sync" = "You don’t have any photos in your lifebox yet.";
-"empty_gallery_no_unsync" = "empty_gallery_no_unsync";
+"tabbar_foryou" = "შენთვის";
+"tabbar_discover" = "აღმოაჩინე";
+"change_pass_mail_or_phone" = "E-mail-ი ან მობილურის ნომერი";
+"mystorage_become_premium" = "მეტი ფუნქციის გამოსაყენებლად, გახდი პრემიუმი.";
+"we_are_creating_your_story_title" = "გიმზადებთ story-ს.";
+"we_are_creating_your_story_desc" = "რომ დასრულდება, გექნება წვდომა ვიდეო ალბომიდან.";
+"trash_bin" = "სანაგვე ურნა";
+"empty_gallery_no_photo" = "ჯერ არ გაქვს ფოტო,ან ვიდეო lifebox-ში.";
+"empty_gallery_no_video" = "ჯერ არ გაქვს ვიდეოები lifebox-ში.";
+"empty_gallery_no_sync" = "ჯერ არ გაქვს ფოტოები lifebox-ში.";
+"empty_gallery_no_unsync" = "ყველა ფაილი განახლებულია";
 "subscription_offer_cancel_button" = "გაუქმება";
