--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2056,7 +2056,7 @@ then {11,99 TRY/Month}*/
 
 /*Facelift*/
 "tabbar_foryou" = "Для Тебя";
-"tabbar_discover" = "Откройте для себя";
+"tabbar_discover" = "Познавать";
 "change_pass_mail_or_phone" = "Адрес Электронной Почты или Номер Телефона";
 "mystorage_become_premium" = "Для больших возможностей станьте Premium-участником";
 "we_are_creating_your_story_title" = "Мы готовим вашу историю.";
