--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2044,7 +2044,7 @@ then {11,99 TRY/Month}*/
 
 /*Facelift*/
 "tabbar_foryou" = "Для Вас";
-"tabbar_discover" = "Відкрийте для себе";
+"tabbar_discover" = "Пізнайте";
 "change_pass_mail_or_phone" = "Адреса Електронної Пошти або Номер Телефону";
 "mystorage_become_premium" = "Для більших можливостей станьте Premium-учасником";
 "we_are_creating_your_story_title" = "Готуємо Вашу історію.";
