--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1495,7 +1495,7 @@
 "tabbar_item_home_label" = "Faqja kryesore";
 "tabbar_item_gallery_label" = "Galeri";
 "tabbar_item_contacts_label" = "Libri i telefonit";
-"tabbar_item_all_files_label" = "Të gjitha skedarët (dosjet)";
+"tabbar_item_all_files_label" = "Dosjet";
 "see_features" = "Tregoji karakteristikat";
 "middle_user_package_description" = "+ 15 Analiza ‘’PhotoPick’’";
 "features_only_package_addon_type" = "Karakteristikat Premium";
