--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -114,7 +114,7 @@
 "Add to album" = "Albüme ekle";
 "Remove from Favorites" = "Favorilerden çıkar";
 "Remove" = "Kaldır";
-"Add to Favorites" = "Favorilere ekle";
+"Add to Favorites" = "Favorilere Ekle";
 "Copy" = "Kopyala";
 "Create a Story" = "Hikaye Oluştur";
 "Share Via Link" = "Bağlantıyı Kopyala";
@@ -211,7 +211,7 @@
 "Name" = "Isim";
 "Create a Name" = "Hikayene bir isim ver";
 "Delete device original" = "Orijinalini cihazdan sil";
-"Add to favorites" = "Favorilere ekle";
+"Add to favorites" = "Favorilere Ekle";
 "Restore" = "Telefona Aktar";
 "Back-Up" = "Yedekle";
 "Your last back up was a few seconds ago." = "Son yedeklemen birkaç saniye önce gerçekleşti.";
