--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2096,3 +2096,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "Nuk keni ende asnjë fotografi në lifebox -in tuaj";
 "empty_gallery_no_unsync" = "Nuk ka skedarë të pa përditësuar në lifebox-in tuaj";
 "subscription_offer_cancel_button" = "Anulo";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "Hapësira në pajisjen tuaj është pothuajse e plotë!";
+"notification_menu_item" = "Njoftimet";
