--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2077,3 +2077,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "lifebox'ınızda henüz hiçbir fotoğraf yedeklenmemiş";
 "empty_gallery_no_unsync" = "lifebox'ınızda yedeklenmemiş hiçbir dosya yok";
 "subscription_offer_cancel_button" = "İptal Et";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "Alanın dolmak üzere!";
+"notification_menu_item" = "Bildirimler";
