--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2055,3 +2055,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "У вашому lifebox поки що немає фотографій";
 "empty_gallery_no_unsync" = "У вашому lifebox немає неоновлених файлів";
 "subscription_offer_cancel_button" = "Скасувати";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "Місце на пристрої майже заповнене!";
+"notification_menu_item" = "Сповіщення";
