--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2095,3 +2095,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "Aún no tienes ninguna foto en tu lifebox";
 "empty_gallery_no_unsync" = "No hay archivos sin actualizar en su lifebox";
 "subscription_offer_cancel_button" = "Cancelar";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "¡El espacio de tu dispositivo está casi lleno!";
+"notification_menu_item" = "Notificaciones";
