--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2053,3 +2053,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "Încă nu aveți fotografii în lifebox";
 "empty_gallery_no_unsync" = "Toate fișierele tale sunt actualizate în lifebox";
 "subscription_offer_cancel_button" = "Anulare";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "Spațiul de pe dispozitiv este aproape plin!";
+"notification_menu_item" = "Notificări";
