LB-1762 Notification empty page is done

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2065,3 +2065,7 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_sync" = "ليس لديك أي صور في lifebox حتى الآن";
 "empty_gallery_no_unsync" = "لا توجد ملفات غير محدثة في lifebox";
 "subscription_offer_cancel_button" = "إلغاء الأمر";
+"paycell_share_message " = "";
+"ksaldalks" = "";
+"free_up_space_title" = "المساحة الموجودة على جهازك ممتلئة تقريبًا!";
+"notification_menu_item" = "الإخطارات";
