--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2053,5 +2053,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "გაუქმება";
 "paycell_share_message " = "შენ გაქვს 5GB lifebox მეხსიერება, დააჭირე რომ გამოისყიდო";
 "ksaldalks" = "-";
+
+/*Fuzzy*/
 "free_up_space_title" = "მეხსიერება არაა საკმარისი";
-"notification_menu_item" = "";
+
+/*Fuzzy*/
+"notification_menu_item" = "შეტყობინებები";
+"notification_buttom_sheet_select_mode" = "notification_buttom_sheet_select_mode";
+"notification_buttom_sheet_only_unread" = "\nnotification_buttom_sheet_only_unread";
+"notification_buttom_sheet_show_alerts" = "notification_buttom_sheet_show_alerts";
+"notifications_no_notification" = "notifications_no_notification";
