--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2055,5 +2055,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Stornieren";
 "paycell_share_message " = "";
 "ksaldalks" = "";
+
+/*Fuzzy*/
 "free_up_space_title" = "Der Gerätespeicher ist fast voll!";
+
+/*Fuzzy*/
 "notification_menu_item" = "Benachrichtigungen";
+"notification_buttom_sheet_select_mode" = "";
+"notification_buttom_sheet_only_unread" = "";
+"notification_buttom_sheet_show_alerts" = "";
+"notifications_no_notification" = "";
