--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2097,5 +2097,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Cancelar";
 "paycell_share_message " = "";
 "ksaldalks" = "";
-"free_up_space_title" = "";
-"notification_menu_item" = "";
+
+/*Fuzzy*/
+"free_up_space_title" = "¡El espacio de tu dispositivo está casi lleno!";
+
+/*Fuzzy*/
+"notification_menu_item" = "Notificaciones";
+"notification_buttom_sheet_select_mode" = "";
+"notification_buttom_sheet_only_unread" = "";
+"notification_buttom_sheet_show_alerts" = "";
+"notifications_no_notification" = "";
