--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2069,5 +2069,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Отмена";
 "paycell_share_message " = "";
 "ksaldalks" = "";
+
+/*Fuzzy*/
 "free_up_space_title" = "Место на устройстве почти заполнено!";
+
+/*Fuzzy*/
 "notification_menu_item" = "Уведомления";
+"notification_buttom_sheet_select_mode" = "";
+"notification_buttom_sheet_only_unread" = "";
+"notification_buttom_sheet_show_alerts" = "";
+"notifications_no_notification" = "";
