--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2098,5 +2098,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Anulo";
 "paycell_share_message " = "";
 "ksaldalks" = "";
+
+/*Fuzzy*/
 "free_up_space_title" = "Hapësira në pajisjen tuaj është pothuajse e plotë!";
+
+/*Fuzzy*/
 "notification_menu_item" = "Njoftimet";
+"notification_buttom_sheet_select_mode" = "";
+"notification_buttom_sheet_only_unread" = "";
+"notification_buttom_sheet_show_alerts" = "";
+"notifications_no_notification" = "";
