--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2079,5 +2079,13 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "İptal Et";
 "paycell_share_message " = "";
 "ksaldalks" = "";
+
+/*Fuzzy*/
 "free_up_space_title" = "Alanın dolmak üzere!";
+
+/*Fuzzy*/
 "notification_menu_item" = "Bildirimler";
+"notification_buttom_sheet_select_mode" = "";
+"notification_buttom_sheet_only_unread" = "";
+"notification_buttom_sheet_show_alerts" = "";
+"notifications_no_notification" = "";
