--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2085,7 +2085,7 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "notification_menu_item" = "Bildirimler";
-"notification_buttom_sheet_select_mode" = "";
-"notification_buttom_sheet_only_unread" = "";
-"notification_buttom_sheet_show_alerts" = "";
-"notifications_no_notification" = "";
+"notification_buttom_sheet_select_mode" = "Seç";
+"notification_buttom_sheet_only_unread" = "Sadece okunmamışlar";
+"notification_buttom_sheet_show_alerts" = "Sadece uyarıları göster";
+"notifications_no_notification" = "Henüz bildirimin yok";
