LB-3291 create collage localize

--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2091,3 +2091,14 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Sadece okunmamışlar";
 "notification_buttom_sheet_show_alerts" = "Sadece uyarıları göster";
 "notifications_no_notification" = "Henüz bildirimin yok";
+
+/*Create Collage*/
+"create_collage_select_photo" = "Fotoğraf Seçin";
+"create_collage_preview_main" = "+New Collage";
+"create_collage_dual" = "2'li Kolajlar";
+"create_collage_triple" = "3'li Kolajlar";
+"create_collage_quad" = "4'li Kolajlar";
+"create_collage_multiple" = "Çoklu Kolajlar";
+"create_collage_all" = "Tüm Kolajlar";
+"create_collage_select_collage" = "Kolaj Seçin";
+"create_collage_info_label" = "Düzenlemek için herhangi bir fotoğrafa dokunun";
